--- a/DataExchangeMVC/Views/Shared/NoRecordFoundError.cshtml
+++ b/DataExchangeMVC/Views/Shared/NoRecordFoundError.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "NoRecordFoundError";
 }
 
-<h2>NoRecordFoundError</h2>
+<h2>No Record Found Error!</h2>
 
 <hgroup class="title">
     <h1 class="error">No Record Found</h1>
