--- a/DataExchangeMVC/Views/Shared/_Layout.cshtml
+++ b/DataExchangeMVC/Views/Shared/_Layout.cshtml
@@ -1,57 +1,27 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>@ViewBag.Title - Data Exchange Application</title>
-        <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <meta name="viewport" content="width=device-width" />
-        @Styles.Render("~/Content/css")
-        @Scripts.Render("~/bundles/modernizr")
-    </head>
-    <body>
-        <header>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("Data Exchange Tool", "Index", "Home")</p>
-                </div>
-                <div class="float-right">
-                    <section id="login">
-                        @Html.Partial("_LoginPartial")
-                    </section>
-@*                    <nav>
-                        <ul id="menu">
-                            <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                        </ul>
-                    </nav>*@
-                </div>
-                <div id="menucontainer">
-                    <ul id="menu">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("People", "Index", "Persons")</li>
-                        <li>@Html.ActionLink("Vehicles", "Index", "Vehicles")</li>
-                        <li>@Html.ActionLink("Logs", "Index", "Logs")</li>
-@*                        <li>@Html.ActionLink("About", "About", "Home")</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
-                    </ul>
-                </div>
-            </div>
-        </header>
-        <div id="body">
-            @RenderSection("featured", required: false)
-            <section class="content-wrapper main-content clear-fix">
-                @RenderBody()
-            </section>
-        </div>
-        <footer>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - DataExchangeTool</p>
-                </div>
-            </div>
-        </footer>
-
-        @Scripts.Render("~/bundles/jquery")
-        @RenderSection("scripts", required: false)
-    </body>
+<html>
+<head>
+<meta charset="utf-8" />
+<title>@ViewBag.Title - Data Exchange Application</title>
+<link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+<script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")"></script>
+<script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")"></script>
+</head>
+<div class="float-right">
+    <section id="login">
+        @Html.Partial("_LoginPartial")
+    </section>
+</div>
+<body>
+<ul id="menu">
+    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+    <li>@Html.ActionLink("People", "Index", "Persons")</li>
+    <li>@Html.ActionLink("Vehicles", "Index", "Vehicles")</li>
+    <li>@Html.ActionLink("Logs", "Index", "Logs")</li>
+</ul> 
+<section id="main">
+@RenderBody()
+<p>&copy; @DateTime.Now.Year - DataExchangeTool</p>
+</section>
+</body>
 </html>
