Add roles; change query search; add success message

--- a/DataExchangeMVC/Views/Account/Register.cshtml
+++ b/DataExchangeMVC/Views/Account/Register.cshtml
@@ -28,10 +28,15 @@
                 @Html.PasswordFor(m => m.ConfirmPassword)
             </li>
         </ol>
+
+        <label for="roleName">Select Role:</label>
+          @Html.DropDownList("roleName")
+          @Html.ValidationMessage("roleName")
+
         <input type="submit" value="Register" />
     </fieldset>
 }
 
-@*@section Scripts {
+@section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-}*@
+}
