--- a/DataExchangeMVC/Views/Persons/Create.cshtml
+++ b/DataExchangeMVC/Views/Persons/Create.cshtml
@@ -86,6 +86,8 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@*@section Scripts {
+<big>@ViewBag.PersonEntryMessage</big>
+
+@section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-}*@
+}
