--- a/DataExchangeMVC/Views/Vehicles/Create.cshtml
+++ b/DataExchangeMVC/Views/Vehicles/Create.cshtml
@@ -62,6 +62,8 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@*@section Scripts {
+<big>@ViewBag.VehicleEntryMessage</big>
+
+@section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-}*@
+}
