--- a/DataExchangeMVC/Views/Shared/_Layout.cshtml
+++ b/DataExchangeMVC/Views/Shared/_Layout.cshtml
@@ -7,11 +7,11 @@
 <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")"></script>
 <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")"></script>
 </head>
-<div class="float-right">
-    <section id="login">
+@*<div class="float-right">*@
+    <h3><section id="login">
         @Html.Partial("_LoginPartial")
-    </section>
-</div>
+    </section></h3>
+@*</div>*@
 <body>
 <ul id="menu">
     <li>@Html.ActionLink("Home", "Index", "Home")</li>
@@ -23,5 +23,7 @@
 @RenderBody()
 <p>&copy; @DateTime.Now.Year - DataExchangeTool</p>
 </section>
+        @Scripts.Render("~/bundles/jquery")
+        @RenderSection("scripts", required: false)
 </body>
 </html>
